# cordova-plugin-chordino

./: .gitignore  package.json  plugin.xml
.github/workflows/: main.yml
libs/ios/Chordino.xcframework/: Info.plist
libs/ios/Chordino.xcframework/ios-arm64/Chordino.framework/: Chordino  Info.plist
libs/ios/Chordino.xcframework/ios-arm64/Chordino.framework/Headers/: Chordino.h
libs/ios/Chordino.xcframework/ios-arm64/dSYMs/Chordino.framework.dSYM/Contents/Resources/Relocations/aarch64/: Chordino.yml
libs/ios/Chordino.xcframework/ios-arm64_x86_64-simulator/Chordino.framework/: Chordino  Info.plist
libs/ios/Chordino.xcframework/ios-arm64_x86_64-simulator/Chordino.framework/Modules/: module.modulemap
libs/ios/Chordino.xcframework/ios-arm64_x86_64-simulator/Chordino.framework/_CodeSignature/: CodeResources
libs/ios/Chordino.xcframework/ios-arm64_x86_64-simulator/dSYMs/Chordino.framework.dSYM/Contents/: Info.plist
libs/ios/Chordino.xcframework/ios-arm64_x86_64-simulator/dSYMs/Chordino.framework.dSYM/Contents/Resources/Relocations/aarch64/: Chordino.yml
src/android/: AudioCapture.kt  CMakeLists.txt  Chordino.kt  Extractor.kt  build.gradle  chordextract.cpp
src/android/vamp-plugin-sdk/: CMakeLists.txt
src/ios/: AudioCapture.swift  Chordino.swift
src/ios/framework/Chordino/: BUILD.md
src/ios/framework/Chordino/Chordino/: Chordino.mm  chordextract.cpp  chordextract.h
src/ios/framework/Chordino/Chordino.xcodeproj/: project.pbxproj
www/: chordino.js
(+1 files in other folders)
